<resources>
    <string name="app_name">Sudoku</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_profile">Profile</string>
    <string name="play">Play</string>
    <string name="credits">Credits</string>
    <string name="exit">Exit</string>
    <string name="save_changes">Save Changes</string>
    <string name="change_picture">Change Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="user">User</string>
    <string name="single_player">Single Player</string>
    <string name="_2_players">2 Players</string>
    <string name="multiplayer">MultiPlayer</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="cDificulties">Choose the difficulty</string>
    <string name="rotate_camera">Rotate Camera</string>
    <string name="hints">Hints</string>
    <string name="delete">Delete</string>
    <string name="anotations">Anotations</string>
    <string name="finished">Finished</string>
    <string name="errors">Errors:</string>
    <string name="DefeatMessage">You have lost! Better luck for the next time!</string>
    <string name="thanks">Thank you!</string>
    <string name="WinMessage">Congratulations, you have won!</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="change_to_m1">Change to single player</string>
    <string name="statistics_op">Opponent:</string>
    <string name="statistics_type">Mode:</string>
    <string name="statistics_result">Result:</string>
    <string name="resultsM1">Won in : m</string>
    <string name="resultspM1">Lost</string>
    <string name="resultsM2">Won with : points</string>
    <string name="WinMessageM2">Congratulations : have won!</string>
    <string name="mpHost">Host</string>
    <string name="mpJoin">Join</string>
    <string name="serverdlg_msg">Waiting for a Client...</string>
    <string name="serverdlg_title">Sudoku Server</string>
    <string name="game_finished">The game was finished</string>
    <string name="mpTurno">Turn:</string>
    <string name="noint">No internet Connection</string>
    <string name="deleteMP">Deletion is disabled in Multiplayer</string>
</resources>
