<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    tools:context=".M1Activity">

    <Button
        android:id="@+id/btAnotations"
        style="@style/WhiteTextButtonLand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_button_home"
        android:text="@string/anotations"
        app:layout_constraintBottom_toBottomOf="@+id/btHints"
        app:layout_constraintEnd_toStartOf="@+id/btDelete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btHints"
        app:layout_constraintTop_toTopOf="@+id/btHints" />

    <FrameLayout
        android:id="@+id/flSudokuM1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#ffffff"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <Button
        android:id="@+id/button"
        style="@style/WhiteTextButtonLand"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/normal_button_home"
        android:text="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btHints" />

    <Button
        android:id="@+id/button2"
        style="@style/WhiteTextButtonLand"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/normal_button_home"
        android:text="2"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        style="@style/WhiteTextButtonLand"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/normal_button_home"
        android:text="3"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        style="@style/WhiteTextButtonLand"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/normal_button_home"
        android:text="4"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        style="@style/WhiteTextButtonLand"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/normal_button_home"
        android:text="5"
        app:layout_constraintBottom_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        style="@style/WhiteTextButtonLand"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/normal_button_home"
        android:text="6"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        style="@style/WhiteTextButtonLand"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/normal_button_home"
        android:text="7"
        app:layout_constraintBottom_toBottomOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        style="@style/WhiteTextButtonLand"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/normal_button_home"
        android:text="8"
        app:layout_constraintBottom_toBottomOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        style="@style/WhiteTextButtonLand"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:background="@drawable/normal_button_home"
        android:text="9"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="@+id/button8" />

    <Button
        android:id="@+id/btHints"
        style="@style/WhiteTextButtonLand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_button_home"
        android:text="@string/hints"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/btAnotations"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btDelete"
        style="@style/WhiteTextButtonLand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/normal_button_home"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="@+id/btAnotations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btAnotations"
        app:layout_constraintTop_toTopOf="@+id/btAnotations" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Time: "
        app:layout_constraintBottom_toTopOf="@+id/btHints"
        app:layout_constraintEnd_toStartOf="@+id/tvTimer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flSudokuM1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Points:"
        app:layout_constraintBottom_toBottomOf="@+id/tvTimer"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvTimer"
        app:layout_constraintTop_toTopOf="@+id/tvTimer" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/errors"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />
</androidx.constraintlayout.widget.ConstraintLayout>